--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "run_development_blockchain": "truffle development"
   },
   "author": "Marcin Gorzynski",
   "license": "ISC"
