--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "Marcin Gorzynski",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.1"
+    "@openzeppelin/contracts": "^4.3.1",
+    "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "@truffle/hdwallet-provider": "^1.5.0"
   }
 }
