--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "emotion-theming": "^11.0.0",
+    "ethers": "^5.5.1",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.0",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
