--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "emotion-theming": "^11.0.0",
     "ethers": "^5.5.1",
+    "formik": "^2.2.9",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
