--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.1",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "bignumber.js": "^9.0.1",
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
