--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "babel-loader": "^8.2.3",
+    "bitcore-lib": "^0.16.0",
     "emotion-theming": "^11.0.0",
-    "ethers": "^5.5.1",
+    "ethers": "^4.0.49",
     "formik": "^2.2.9",
     "framer-motion": "^4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^4.0.3",
+    "typescript": ">=2.8.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.0",
-    "web3-react": "^5.0.5"
+    "web3-react": "^5.0.0",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
